--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,100&family=Source+Sans+Pro:wght@300;600&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <title>Ausaf Ahmad</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
